# simple-mandelbrot-set

./: CMakeLists.txt  glad.c  glad.h  main.cpp  shader.h
.cache/clangd/index/: glad.c.B03E1B7F6A038C7F.idx  glad.h.9B7313E2A80F5CF4.idx  main.cpp.BA21C689A834D659.idx  shader.h.838D7A96D4DB68FA.idx
shaders/: f_shader.glsl  v_shader.glsl
